# spirit-connect

./: .gitignore  README.md
docs/: PRD.md  TSD.md
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/spiritconnect/spirit_connect/: MainActivity.kt
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/models/: memory.dart  message.dart  persona.dart
mobile/lib/providers/: chat_provider.dart  history_provider.dart  memory_provider.dart  persona_provider.dart
mobile/lib/screens/: chat_screen.dart  history_screen.dart  memory_screen.dart  persona_memory_screen.dart  settings_screen.dart
mobile/lib/services/: api_service.dart
mobile/linux/: CMakeLists.txt
mobile/linux/runner/: my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: Runner.rc  main.cpp
server/: .env.example  config.py  database.py  main.py  pyproject.toml  start.sh
server/middleware/: auth.py
server/models/: db.py
server/routes/: chat.py  conversations.py  memory.py
server/schemas/: chat.py  memory.py
server/services/: memory_service.py  ollama.py
